dataset1235/2025-2/610742602/users/14016319/executions/677928262_1078076002.log
== RUN (2025-08-26 21:49:10)
-- CODE: 
x 1 =1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 =1.23
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 =1.23
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:49:09)
-- CODE: 
x 1 =1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 =1.23
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 =1.23
      ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:56:31)
-- CODE: 
x1 =1.23
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
